vlib/v/checker/tests/unknown_method_suggest_name.out
vlib/v/checker/tests/unknown_method_suggest_name.v:7:2: error: unknown type `hash.crc32.Crc33`.
Did you mean `crc32.Crc32`?
    5 |     y   int
    6 |     z   int
    7 |     ccc crc32.Crc33
      |     ~~~~~~~~~~~~~~~
    8 | }
    9 |
vlib/v/checker/tests/unknown_method_suggest_name.v:27:9: error: unknown method: `Point.tranzlate`.
Did you mean `translate`?
   25 |     p := Point{1, 2, 3}
   26 |     v := Vector{5, 5, 10}
   27 |     z := p.tranzlate(v)
      |            ~~~~~~~~~~~~
   28 |     println('p: $p')
   29 |     println('v: $v')
